# adaptive-topic-learning-app

./: .gitignore  README.md  dr.ps1  extract_questions.py  index.html  manifest.webmanifest  nanoin.html  ocr_pdfs.py  parse_questions.py  taver.html  xrf.html
pseudo_pro_v2/: README.md  architecture.md  implementation-delta.md  implementation-plan.md  implementation_delta.md  interfaces.md  migration-notes.md  next-implementation-priorities.md  portability-cleanup-report.md  postmortem.md  pyproject.toml  reuse-and-discard.md  separation-policy.md  vertical-slice-plan.md
pseudo_pro_v2/core/docs/: absence-claim-policy.md  scope-budget-policy.md
pseudo_pro_v2/core/gates/: decision-usable-rubric.md  release-gate.md
pseudo_pro_v2/core/metrics/: metric-policy.md
pseudo_pro_v2/core/module_interfaces/: README.md  stage-contracts.md
pseudo_pro_v2/core/prompts/: README.md
pseudo_pro_v2/core/schemas/: citation-ledger.schema.tsv  claim-ledger.schema.tsv  domain-adapter.schema.md  source-log.schema.tsv  source-role.schema.md
pseudo_pro_v2/fixtures/: README.md
pseudo_pro_v2/scripts/: run_vertical_slice.py
pseudo_pro_v2/tests/: README.md  test_clean_room_isolation.py  test_decision_usable_quality.py  test_decision_usable_rubric.py  test_evidence_mapper.py  test_fixture_semantic_isolation.py  test_fixture_semantic_isolation_v2.py  test_metrics_integrity.py  test_portability_cleanup.py  test_portability_runtime.py  test_release_gate.py  test_richer_packets.py  test_stage_contracts.py  test_tone_controller.py  test_vertical_slice.py  test_vertical_slice_multigenre.py
(+374 files in other folders)
