[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pseudo-pro-v2"
version = "0.1.0"
description = "Clean-room generic pseudo-Pro / pseudo-Deep-Research MVP"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
